[gd_scene load_steps=20 format=3 uid="uid://cgw6rfirr30ks"]

[ext_resource type="PackedScene" uid="uid://dayfxbmtsuqrd" path="res://scenes/Rain/Rain.tscn" id="1_3xpcx"]
[ext_resource type="Texture2D" uid="uid://hb5qw0s3eac2" path="res://graphics/terrain/tilemaps/GrassTilemap.png" id="1_qesyg"]
[ext_resource type="Texture2D" uid="uid://tybwuvagd8f" path="res://graphics/placeholder/Background.jpg" id="1_u5atv"]
[ext_resource type="PackedScene" uid="uid://ynsikejtex8b" path="res://scenes/character/SpellManager.tscn" id="1_xxy83"]
[ext_resource type="PackedScene" uid="uid://b45ydlouck4io" path="res://scenes/menus/spell_list/spell_list.tscn" id="2_5gk46"]
[ext_resource type="PackedScene" uid="uid://4r48f8lttmp" path="res://scenes/level/deathzone.tscn" id="2_xw1hr"]
[ext_resource type="Script" path="res://scenes/multiplayer/MultiplayerSpawner.gd" id="3_bo8on"]
[ext_resource type="PackedScene" uid="uid://cubitxapsm3h1" path="res://scenes/character/char.tscn" id="4_hlpcm"]
[ext_resource type="Script" path="res://scenes/level/GameManager.gd" id="6_rr77g"]
[ext_resource type="Texture2D" uid="uid://cfid2jqbgff5a" path="res://graphics/terrain/tilemaps/SandTilemap.png" id="7_0bcpd"]
[ext_resource type="Texture2D" uid="uid://cw5qjtmaxd4du" path="res://graphics/terrain/tilemaps/GrassTilemap2.png" id="8_omqvo"]
[ext_resource type="Script" path="res://scenes/level/Maps.gd" id="9_dvt6g"]

[sub_resource type="CanvasTexture" id="CanvasTexture_a7tux"]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_ewimc"]
resource_name = "GrassTileset"
texture = ExtResource("1_qesyg")
texture_region_size = Vector2i(64, 64)
0:0/0 = 0
0:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
0:0/0/physics_layer_0/angular_velocity = 0.0
0:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-32, -32, 32, -32, 32, 32, -32, 32)
1:0/0 = 0
1:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
1:0/0/physics_layer_0/angular_velocity = 0.0
1:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-32, -32, 32, -32, 32, 32, -32, 32)
0:1/0 = 0
0:1/0/physics_layer_0/linear_velocity = Vector2(0, 0)
0:1/0/physics_layer_0/angular_velocity = 0.0
0:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-32, -32, 32, -32, 32, 32, -32, 32)
1:1/0 = 0
1:1/0/physics_layer_0/linear_velocity = Vector2(0, 0)
1:1/0/physics_layer_0/angular_velocity = 0.0
1:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-32, -32, 32, -32, 32, 32, -32, 32, -32, -32)
2:1/0 = 0
2:1/0/physics_layer_0/linear_velocity = Vector2(0, 0)
2:1/0/physics_layer_0/angular_velocity = 0.0
2:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-32, -32, 32, -32, 32, 32, -32, 32)
1:2/0 = 0
1:2/0/physics_layer_0/linear_velocity = Vector2(0, 0)
1:2/0/physics_layer_0/angular_velocity = 0.0
1:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(32, 32, -32, -32, -32, 32)
0:2/0 = 0
0:2/0/physics_layer_0/linear_velocity = Vector2(0, 0)
0:2/0/physics_layer_0/angular_velocity = 0.0
0:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-32, 32, 32, 32, 32, -32)

[sub_resource type="TileSet" id="TileSet_3p33u"]
tile_size = Vector2i(64, 64)
physics_layer_0/collision_layer = 7
physics_layer_0/collision_mask = 7
sources/0 = SubResource("TileSetAtlasSource_ewimc")

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_i7qwt"]
resource_name = "GrassTilemap"
texture = ExtResource("8_omqvo")
texture_region_size = Vector2i(64, 64)
0:0/0 = 0
0:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
0:0/0/physics_layer_0/angular_velocity = 0.0
0:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-32, -32, 32, -32, 32, 32, -32, 32)
1:0/0 = 0
1:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
1:0/0/physics_layer_0/angular_velocity = 0.0
1:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-32, -32, 32, -32, 32, 32, -32, 32)
0:1/0 = 0
0:1/0/physics_layer_0/linear_velocity = Vector2(0, 0)
0:1/0/physics_layer_0/angular_velocity = 0.0
0:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-32, -32, 32, -32, 32, 32, -32, 32)
1:1/0 = 0
1:1/0/physics_layer_0/linear_velocity = Vector2(0, 0)
1:1/0/physics_layer_0/angular_velocity = 0.0
1:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-32, -32, 32, -32, 32, 32, -32, 32)
2:1/0 = 0
2:1/0/physics_layer_0/linear_velocity = Vector2(0, 0)
2:1/0/physics_layer_0/angular_velocity = 0.0
2:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-32, -32, 32, -32, 32, 32, -32, 32)
0:2/0 = 0
0:2/0/physics_layer_0/linear_velocity = Vector2(0, 0)
0:2/0/physics_layer_0/angular_velocity = 0.0
0:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(32, 32, -32, 32, 32, -32)
1:2/0 = 0
1:2/0/physics_layer_0/linear_velocity = Vector2(0, 0)
1:2/0/physics_layer_0/angular_velocity = 0.0
1:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-32, -32, 32, 32, -32, 32)

[sub_resource type="TileSet" id="TileSet_7poc2"]
tile_size = Vector2i(64, 64)
physics_layer_0/collision_layer = 7
physics_layer_0/collision_mask = 7
sources/0 = SubResource("TileSetAtlasSource_i7qwt")

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_mxf0f"]
texture = ExtResource("7_0bcpd")
texture_region_size = Vector2i(64, 64)
0:0/0 = 0
0:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
0:0/0/physics_layer_0/angular_velocity = 0.0
0:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-32, -32, 32, -32, 32, 32, -32, 32)
1:0/0 = 0
1:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
1:0/0/physics_layer_0/angular_velocity = 0.0
1:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-32, -32, 32, -32, 32, 32, -32, 32)
0:1/0 = 0
0:1/0/physics_layer_0/linear_velocity = Vector2(0, 0)
0:1/0/physics_layer_0/angular_velocity = 0.0
0:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-32, -32, 32, -32, 32, 32, -32, 32)
1:1/0 = 0
1:1/0/physics_layer_0/linear_velocity = Vector2(0, 0)
1:1/0/physics_layer_0/angular_velocity = 0.0
1:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-32, -32, 32, -32, 32, 32, -32, 32)
2:1/0 = 0
2:1/0/physics_layer_0/linear_velocity = Vector2(0, 0)
2:1/0/physics_layer_0/angular_velocity = 0.0
2:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-32, -32, 32, -32, 32, 32, -32, 32)
1:2/0 = 0
1:2/0/physics_layer_0/linear_velocity = Vector2(0, 0)
1:2/0/physics_layer_0/angular_velocity = 0.0
1:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-32, -32, 32, 32, -32, 32)
0:2/0 = 0
0:2/0/physics_layer_0/linear_velocity = Vector2(0, 0)
0:2/0/physics_layer_0/angular_velocity = 0.0
0:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(32, -32, -32, 32, 32, 32)

[sub_resource type="TileSet" id="TileSet_54ixs"]
tile_size = Vector2i(64, 64)
physics_layer_0/collision_layer = 7
physics_layer_0/collision_mask = 7
sources/0 = SubResource("TileSetAtlasSource_mxf0f")

[node name="Level" type="Node2D"]

[node name="GameManager" type="Node2D" parent="."]
z_index = 100
script = ExtResource("6_rr77g")

[node name="Timers" type="Node" parent="GameManager"]

[node name="RoundStart" type="Timer" parent="GameManager/Timers"]
wait_time = 3.0
one_shot = true

[node name="DisplayWinner" type="Timer" parent="GameManager/Timers"]
wait_time = 2.0
one_shot = true

[node name="Movement" type="Timer" parent="GameManager/Timers"]
wait_time = 2.0
one_shot = true

[node name="Cards" type="Node2D" parent="GameManager"]
z_index = 3

[node name="TimerText" type="Label" parent="GameManager"]
z_index = 1
offset_left = 920.0
offset_top = 540.0
offset_right = 930.0
offset_bottom = 563.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 6
size_flags_vertical = 6
theme_override_font_sizes/font_size = 80
text = "3"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Button" type="Button" parent="GameManager/TimerText"]
visible = false
layout_mode = 0
offset_left = 162.0
offset_top = 105.5
offset_right = 520.0
offset_bottom = 201.5
theme_override_font_sizes/font_size = 64
text = "Main Menu"

[node name="Dim" type="Sprite2D" parent="GameManager"]
modulate = Color(0, 0, 0, 0)
position = Vector2(960, 540)
scale = Vector2(1920, 1080)
texture = SubResource("CanvasTexture_a7tux")

[node name="SpellUI" type="Node" parent="GameManager"]

[node name="Spell List L" parent="GameManager/SpellUI" instance=ExtResource("2_5gk46")]
offset_top = 94.0
offset_bottom = -886.0
metadata/_edit_use_anchors_ = true

[node name="Spell List R" parent="GameManager/SpellUI" instance=ExtResource("2_5gk46")]
offset_left = 1460.0
offset_top = 94.0
offset_right = 0.0
offset_bottom = -886.0
metadata/_edit_use_anchors_ = true

[node name="Wincounts" type="Node2D" parent="GameManager"]
z_index = 4

[node name="Player1" type="Label" parent="GameManager/Wincounts"]
offset_top = -25.0
offset_right = 374.0
offset_bottom = 85.0
size_flags_horizontal = 6
size_flags_vertical = 6
theme_override_font_sizes/font_size = 50
text = "Player 1 wins: 0"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Player2" type="Label" parent="GameManager/Wincounts"]
offset_left = 1430.0
offset_top = -21.0
offset_right = 2025.0
offset_bottom = 89.0
size_flags_horizontal = 6
size_flags_vertical = 6
theme_override_font_sizes/font_size = 50
text = "Player 2 wins: 0"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Sky" type="Sprite2D" parent="."]
position = Vector2(959.778, 542)
scale = Vector2(1.01, 1.01481)
texture = ExtResource("1_u5atv")

[node name="Rain" parent="." instance=ExtResource("1_3xpcx")]
visible = false
z_index = 1
position = Vector2(1020, 0)
scale = Vector2(3, 3)

[node name="SpellManager" parent="." instance=ExtResource("1_xxy83")]

[node name="Deathzone" parent="." instance=ExtResource("2_xw1hr")]
position = Vector2(986, 1292)
scale = Vector2(151.166, 4)

[node name="Deathzone2" parent="." instance=ExtResource("2_xw1hr")]
position = Vector2(-276, 378)
scale = Vector2(10, 110)

[node name="Deathzone3" parent="." instance=ExtResource("2_xw1hr")]
position = Vector2(2181, 321)
scale = Vector2(10, 110)

[node name="Maps" type="Node2D" parent="."]
script = ExtResource("9_dvt6g")

[node name="GrassMap" type="TileMap" parent="Maps"]
scale = Vector2(0.8, 0.8)
tile_set = SubResource("TileSet_3p33u")
format = 2
layer_0/enabled = false
layer_0/tile_data = PackedInt32Array(917540, 0, 1, 917539, 65536, 0, 917538, 65536, 0, 917537, 65536, 0, 917536, 65536, 1, 327687, 65536, 1, 327688, 65536, 0, 327689, 65536, 0, 327690, 0, 1, 393227, 65536, 0, 327716, 0, 1, 327715, 65536, 0, 393250, 0, 0, 327714, 65536, 1, 393249, 65536, 0, 327691, 131072, 1, 393226, 0, 0, 393225, 0, 0, 393224, 0, 0, 393223, 0, 0, 458760, 0, 0, 458761, 0, 0, 524297, 0, 0, 524298, 0, 0, 458762, 0, 0, 983044, 65536, 0, 983043, 65536, 1, 1048579, 0, 0, 1048580, 0, 0, 983045, 65536, 0, 983046, 0, 1, 1048582, 0, 0, 1048581, 0, 0, 1114117, 0, 0, 1114116, 0, 0, 1179653, 0, 0, 983073, 0, 0, 983074, 0, 0, 983075, 0, 0, 1048609, 0, 0, 1048610, 0, 0, 1048611, 0, 0, 1114146, 0, 0, 1179682, 0, 0, 1179683, 0, 0, 1114147, 0, 0, 1048612, 0, 0, 983076, 0, 0, 983077, 0, 0, 917522, 65536, 0, 983058, 0, 0, 1048594, 0, 0, 1114131, 0, 0, 1114130, 0, 0, 1179666, 0, 0, 1245202, 0, 0, 1179667, 0, 0, 1048595, 0, 0, 983059, 0, 0, 917523, 0, 1, 917521, 65536, 0, 983057, 0, 0, 1048593, 0, 0, 917520, 65536, 1, 524314, 0, 0, 589850, 0, 0, 655386, 0, 0, 720922, 0, 0, 720923, 0, 0, 786459, 0, 0, 786458, 0, 0, 851994, 0, 0, 655387, 0, 0, 589851, 0, 0, 589852, 0, 0, 524315, 65536, 0, 524316, 0, 1, 458778, 65536, 1, 1114123, 65536, 1, 1114124, 0, 1, 1179659, 0, 0, 1245195, 0, 0, 1245196, 0, 0, 1179660, 0, 0, 1310732, 0, 0, 1114148, 65536, 1342177282, 1114145, 65536, 805306370, 983072, 65536, 805306370, 1245218, 65536, 805306370, 1245219, 65536, 1342177282, 1048613, 65536, 1342177282, 851995, 65536, 1342177282, 917530, 65536, 1342177282, 655388, 65536, 1342177282, 589833, 65536, 805306370, 524296, 65536, 805306370, 458759, 65536, 805306370, 458763, 65536, 1342177282, 589834, 65536, 1342177282, 1114118, 65536, 1342177282, 1114115, 65536, 805306370, 1179652, 65536, 805306370, 1310731, 65536, 805306370, 1114129, 65536, 805306370, 983056, 65536, 805306370, 1245203, 65536, 1342177282, 1114139, 65536, 1, 1114140, 65536, 0, 1114141, 0, 1, 1179676, 0, 0, 1179677, 0, 0, 1245212, 65536, 805306370, 1179675, 65536, 805306370, 1245213, 65536, 1342177282, 589846, 65536, 0, 589845, 65536, 1, 589847, 0, 1, 655382, 0, 0, 655381, 65536, 805306370, 655383, 65536, 1342177282, 655362, 65536, 0, 655363, 65536, 0, 720899, 65536, 1342177282, 720898, 65536, 805306370, 655395, 65536, 805306370, 655396, 65536, 1342177282, 589859, 65536, 1, 589860, 0, 1, 393251, 65536, 1342177282, 196625, 65536, 0, 196626, 65536, 0, 262161, 0, 0, 262162, 0, 0, 327698, 0, 0, 327697, 65536, 805306370)

[node name="SpawnPoints" type="Node2D" parent="Maps/GrassMap"]
scale = Vector2(1.25, 1.25)

[node name="0" type="Node2D" parent="Maps/GrassMap/SpawnPoints" groups=["PlayerSpawnPoint"]]
position = Vector2(262, 666)

[node name="1" type="Node2D" parent="Maps/GrassMap/SpawnPoints" groups=["PlayerSpawnPoint"]]
position = Vector2(1774, 623)

[node name="2" type="Node2D" parent="Maps/GrassMap/SpawnPoints" groups=["PlayerSpawnPoint"]]
position = Vector2(487, 171)

[node name="3" type="Node2D" parent="Maps/GrassMap/SpawnPoints" groups=["PlayerSpawnPoint"]]
position = Vector2(1830, 167)

[node name="FallMap" type="TileMap" parent="Maps"]
scale = Vector2(0.8, 0.8)
tile_set = SubResource("TileSet_7poc2")
format = 2
layer_0/enabled = false
layer_0/tile_data = PackedInt32Array(851971, 65536, 0, 851972, 65536, 0, 851973, 65536, 0, 851974, 65536, 0, 851975, 65536, 0, 851976, 65536, 0, 851970, 65536, 1, 851977, 0, 1, 917524, 65536, 0, 917525, 65536, 0, 917526, 65536, 0, 917527, 65536, 0, 917528, 65536, 0, 917529, 65536, 0, 917530, 65536, 0, 917531, 0, 1, 917523, 65536, 1, 589849, 65536, 1, 589850, 65536, 0, 589851, 65536, 0, 589852, 65536, 0, 589853, 65536, 0, 589854, 65536, 2, 393217, 65536, 1, 393218, 65536, 0, 393219, 65536, 0, 393220, 0, 1, 458754, 0, 0, 458755, 0, 0, 458756, 65536, 1342177282, 458753, 65536, 805306370, 917507, 0, 0, 917508, 0, 0, 917509, 0, 0, 917510, 0, 0, 917511, 0, 0, 983044, 0, 0, 983045, 0, 0, 983046, 0, 0, 983061, 0, 0, 983062, 0, 0, 983063, 0, 0, 983064, 0, 0, 983065, 0, 0, 983066, 0, 0, 1048600, 0, 0, 1048601, 0, 0, 1048599, 0, 0, 1114136, 0, 0, 1114137, 0, 0, 1048602, 0, 0, 655386, 0, 0, 655387, 0, 0, 655388, 0, 0, 655389, 0, 0, 720925, 0, 0, 720926, 0, 0, 655390, 0, 0, 1179658, 0, 0, 1179659, 0, 0, 1179660, 0, 0, 1179661, 0, 0, 1179662, 0, 0, 1179663, 0, 0, 1114127, 65536, 2, 1114126, 65536, 0, 1114125, 65536, 0, 1114124, 65536, 0, 1114123, 65536, 0, 1114122, 65536, 1, 1245198, 65536, 1342177282, 1245195, 65536, 805306370, 1245196, 0, 0, 1245197, 0, 0, 983047, 65536, 1342177282, 917512, 65536, 1342177282, 917506, 65536, 805306370, 983043, 65536, 805306370, 983060, 65536, 805306370, 1048598, 65536, 805306370, 1114135, 65536, 805306370, 1114138, 65536, 1342177282, 983067, 65536, 1342177282, 720924, 65536, 805306370, 655385, 65536, 805306370, 458763, 65536, 1, 458764, 65536, 0, 458765, 65536, 0, 458766, 65536, 0, 458767, 65536, 0, 458768, 65536, 0, 458769, 65536, 0, 458770, 0, 1, 524300, 0, 0, 524301, 0, 0, 524302, 0, 0, 524303, 0, 0, 524304, 0, 0, 589840, 0, 0, 589839, 0, 0, 589838, 0, 0, 655374, 0, 0, 720910, 0, 0, 655375, 0, 0, 720911, 65536, 1342177282, 655376, 65536, 1342177282, 524305, 65536, 1342177282, 589837, 65536, 805306370, 524299, 65536, 805306370, 720909, 65536, 1610612738, 786445, 65536, 805306370, 786446, 65536, 1342177282, 1048608, 65536, 1, 1048609, 65536, 0, 1048610, 65536, 0, 1048611, 0, 1, 1114146, 65536, 1342177282, 1179681, 65536, 1342177282, 1114145, 0, 0, 1114144, 0, 0, 1179680, 65536, 805306370, 131094, 65536, 1, 131095, 65536, 0, 131096, 0, 1, 196631, 65536, 1342177282, 196630, 65536, 805306370, 524323, 65536, 805306370, 458786, 65536, 805306370, 458787, 0, 0, 393250, 65536, 1, 393251, 0, 1, 262159, 65536, 1342177282, 196623, 65536, 2, 262158, 65536, 805306370, 196622, 65536, 1610612738, 1179667, 65536, 1610612738, 1179668, 65536, 2, 1245204, 65536, 1342177282, 1245203, 65536, 805306370, 1310722, 65536, 805306370, 1245186, 65536, 1610612738, 1245187, 65536, 2, 1310723, 65536, 1342177282)

[node name="SpawnPoints" type="Node2D" parent="Maps/FallMap"]
scale = Vector2(1.25, 1.25)

[node name="0" type="Node2D" parent="Maps/FallMap/SpawnPoints" groups=["PlayerSpawnPoint"]]
position = Vector2(274, 579)

[node name="1" type="Node2D" parent="Maps/FallMap/SpawnPoints" groups=["PlayerSpawnPoint"]]
position = Vector2(1731, 722)

[node name="2" type="Node2D" parent="Maps/FallMap/SpawnPoints" groups=["PlayerSpawnPoint"]]
position = Vector2(1428, 373)

[node name="3" type="Node2D" parent="Maps/FallMap/SpawnPoints" groups=["PlayerSpawnPoint"]]
position = Vector2(145, 222)

[node name="SandMap" type="TileMap" parent="Maps"]
scale = Vector2(0.8, 0.8)
tile_set = SubResource("TileSet_54ixs")
format = 2
layer_0/enabled = false
layer_0/tile_data = PackedInt32Array(983067, 131072, 1, 1048603, 131072, 1, 1114139, 65536, 805306370, 1048604, 131072, 1, 1114140, 0, 0, 1048605, 131072, 1, 1114141, 131072, 1, 1114142, 65536, 0, 1114143, 65536, 0, 1114144, 65536, 0, 917531, 131072, 1, 983068, 131072, 1, 1179676, 65536, 805306370, 1179677, 0, 0, 1179678, 0, 0, 1179679, 0, 0, 1179680, 0, 0, 1114145, 65536, 0, 1179681, 0, 0, 1114146, 0, 1, 1179682, 65536, 1342177282, 1048582, 131072, 1, 983047, 131072, 1, 1048583, 131072, 1, 983048, 131072, 1, 1114114, 65536, 1, 1179650, 65536, 805306370, 1114115, 65536, 0, 1179651, 0, 0, 1114116, 65536, 0, 1179652, 0, 0, 1114117, 65536, 0, 1179653, 0, 0, 1114118, 65536, 0, 1179654, 0, 0, 1114119, 0, 0, 1179655, 65536, 1342177282, 1048584, 0, 0, 1114120, 65536, 1342177282, 720911, 65536, 0, 786447, 65536, 805306370, 720912, 65536, 0, 786448, 0, 0, 851984, 65536, 805306370, 720913, 65536, 0, 786449, 0, 0, 851985, 0, 0, 917521, 0, 0, 983057, 65536, 805306370, 720914, 65536, 0, 786450, 0, 0, 851986, 0, 0, 917522, 0, 0, 983058, 0, 0, 720915, 65536, 0, 786451, 0, 0, 851987, 0, 0, 917523, 0, 0, 983059, 65536, 1342177282, 720916, 65536, 0, 786452, 0, 0, 851988, 65536, 1342177282, 720917, 65536, 0, 786453, 65536, 1342177282, 393239, 65536, 1, 393240, 65536, 0, 393241, 65536, 0, 393242, 65536, 0, 393243, 65536, 0, 458779, 65536, 805306370, 196636, 65536, 0, 262172, 0, 0, 393244, 65536, 0, 458780, 0, 0, 393245, 65536, 0, 458781, 0, 0, 524317, 65536, 805306370, 393246, 65536, 0, 458782, 0, 0, 524318, 0, 0, 393247, 65536, 0, 458783, 0, 0, 524319, 0, 0, 589855, 65536, 805306370, 393248, 65536, 0, 458784, 0, 0, 524320, 0, 0, 589856, 0, 0, 655392, 65536, 805306370, 393249, 65536, 0, 458785, 0, 0, 524321, 0, 0, 589857, 0, 0, 655393, 0, 0, 393250, 0, 1, 458786, 0, 0, 524322, 0, 0, 589858, 0, 0, 655394, 65536, 1342177282, 393219, 65536, 1, 458755, 65536, 805306370, 393220, 65536, 0, 458756, 0, 0, 524292, 0, 0, 589828, 0, 0, 393221, 65536, 0, 458757, 0, 0, 524293, 0, 0, 589829, 0, 0, 393222, 65536, 0, 458758, 0, 0, 524294, 0, 0, 393223, 65536, 0, 458759, 0, 0, 524295, 0, 0, 393224, 65536, 0, 458760, 0, 0, 393225, 65536, 0, 196618, 65536, 1, 393226, 65536, 0, 655364, 65536, 805306370, 655365, 0, 0, 589830, 0, 0, 655366, 65536, 1342177282, 589831, 0, 0, 524296, 0, 0, 589832, 65536, 1342177282, 458761, 0, 0, 524297, 65536, 1342177282, 458762, 0, 0, 196619, 65536, 0, 262155, 0, 0, 393227, 65536, 0, 458763, 65536, 1342177282, 393228, 65536, 0, 393229, 0, 1, 1048585, 0, 0, 983050, 0, 1, 1048586, 65536, 1342177282, 983049, 131072, 1, 1310736, 65536, 0, 1310737, 65536, 0, 1310738, 65536, 0, 1310739, 65536, 0, 1310740, 65536, 0, 1310741, 65536, 0, 1376272, 65536, 805306370, 1376277, 65536, 1342177282, 1376273, 0, 0, 1376274, 0, 0, 1376275, 0, 0, 1376276, 0, 0)

[node name="SpawnPoints" type="Node2D" parent="Maps/SandMap"]
scale = Vector2(1.25, 1.25)

[node name="0" type="Node2D" parent="Maps/SandMap/SpawnPoints" groups=["PlayerSpawnPoint"]]
position = Vector2(233, 777)

[node name="1" type="Node2D" parent="Maps/SandMap/SpawnPoints" groups=["PlayerSpawnPoint"]]
position = Vector2(1650, 790)

[node name="2" type="Node2D" parent="Maps/SandMap/SpawnPoints" groups=["PlayerSpawnPoint"]]
position = Vector2(1666, 191)

[node name="3" type="Node2D" parent="Maps/SandMap/SpawnPoints" groups=["PlayerSpawnPoint"]]
position = Vector2(313, 196)

[node name="MultiplayerSpawner" type="MultiplayerSpawner" parent="."]
spawn_path = NodePath(".")
script = ExtResource("3_bo8on")
playerScene = ExtResource("4_hlpcm")

[connection signal="timeout" from="GameManager/Timers/RoundStart" to="GameManager" method="_on_timer_timeout"]
[connection signal="timeout" from="GameManager/Timers/DisplayWinner" to="GameManager" method="_on_display_winner_timeout"]
[connection signal="pressed" from="GameManager/TimerText/Button" to="GameManager" method="_on_button_pressed"]
